src/objects/Q_A__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Q &amp; A</relationshipLabel>
        <relationshipName>Q_A</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Q &amp; A</relationshipLabel>
        <relationshipName>Prospecting_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Field_Sales_Project_Members__c</referenceTo>
        <relationshipLabel>Q &amp; A</relationshipLabel>
        <relationshipName>Q_A</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questionnaire Setup</label>
        <referenceTo>Questionnaire_Setup__c</referenceTo>
        <relationshipLabel>Q &amp; A</relationshipLabel>
        <relationshipName>Q_A</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Q_A</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Q &amp; A</label>
    <nameField>
        <label>Q &amp; A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Q &amp; A</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>